# VoxelRenderer

./: .gitignore  CMakeLists.txt  README.md  buffer.h  camera.h  main.cpp  player_controller.cpp  player_controller.h  shader.cpp  vertex_array.cpp  vertex_array.h
shaders/: screen.frag  screen.vert
src/: main.cpp  material.h  player_controller.cpp  shader.cpp  shader.h  texture_array.cpp  texture_array.h  vertex_array.cpp  vertex_array.h
src/world/: chunk.cpp  chunk.h  voxel.h  world.h
world/: chunk.h  voxel.h  world.h
